--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "todo_list",
-    "short_name": "todo_list",
+    "name": "task_list",
+    "short_name": "task_list",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
